# OSCSynth

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
include/: Biquad.h  adsr.h  datatypes.h  distortion.h  midiman.h  osc_synth.h  oscicontainer.h  oscman.h
osc/: OSCControl.tosc
src/: Biquad.cpp  adsr.cpp  distortion.cpp  main.cpp  midiman.cpp  osc_synth.cpp  osc_synth.h  oscicontainer.cpp  oscman.cpp  releaseNote.cpp  sawtoothwave.cpp
